loadbalancer/CiliumClusterwideNetworkPolicy-traefik.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: traefik
  namespace: loadbalancer
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argocd-server
            io.kubernetes.pod.namespace: argocd
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: longhorn-ui
            io.kubernetes.pod.namespace: longhorn-system
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: hubble-ui
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/component: app
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      io.kubernetes.pod.namespace: loadbalancer
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "8443"
              protocol: TCP
            - port: "21115"
              protocol: TCP
            - port: "21116"
              protocol: UDP
            - port: "21116"
              protocol: TCP
            - port: "21117"
              protocol: TCP
